fix ios layout overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,8 @@
   html,
   body,
   #root {
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 100%;
     min-height: 100vh;
     margin: 0;
     padding: 0;
